# AITrackmania

./: .env-example  .gitignore  Makefile  README.md  plotTrackPoints.py  pyproject.toml  reward_test-3.pkl  setup.py  tmp_wandb_history.csv  update_config.py
docs/: BEST_INPUTS_AND_ARCHITECTURE.md  EXPERIMENTS_AND_HYPERPARAMETERS_REPORT.md  PLAYER_RUNS_REPLAY_BUFFER.md  RECORDING_TRACK_AND_LIDAR.md  REWARD_CONFIG_TUNING.md  REWARD_FUNCTION_AND_PROJECT_REPORT.md  SAME_PC_SETUP.md  SOPHYRESIDUAL_RUN_L_ANALYSIS_AND_HANDOFF_REPORT.md  config_sophy_fixed.json  config_sophy_run_o.json  config_tqcgrab_1actor_recommended.json  debug_listen_port.py  plugin_code.as
docs/source/: conf.py
readme/: Install.md  tuto_library.md
scripts/: build_centerline_reward.py  check_wandb_run.py  fetch_wandb_report.py  interpolate_reward_trajectory.py  wandb_last_50_rounds.py
tmrl/: .readthedocs.yaml  __init__.py  __main__.py  actor.py  envs.py  memory.py  networking.py  setup.py  training.py  training_offline.py  util.py  wrappers.py
tmrl/config/: README.md  config_constants.py  config_objects.py
tmrl/custom/: custom_algorithms.py  custom_checkpoints.py  custom_memories.py  custom_models.py  info_nce.py
tmrl/custom/interfaces/: TM2020Interface.py  TM2020InterfaceIMPALA.py  TM2020InterfaceIMPALAwoImages.py  TM2020InterfaceLidar.py  TM2020InterfaceLidarImages.py  TM2020InterfaceLidarProgress.py  TM2020InterfaceSophy.py  TM2020InterfaceTQC.py  TM2020InterfaceTrackMap.py  TM2020InterfaceTrackMapImages.py
tmrl/custom/models/: EffNetActorCritic.py  IMPALA.py  MLPActorCritic.py  REDQMLPActorCritic.py  RNNActorCritic.py  Sophy.py  VanillaCNNActorCritic.py  VanillaColorCNNActorCritic.py  model_blocks.py  model_constants.py
tmrl/custom/tm/: tm_gym_interfaces.py  tm_preprocessors.py
tmrl/custom/utils/: nn.py  (+2 more)
tmrl/tools/: benchmark_environment.py  check_environment.py  import_player_runs.py  player_runs.py  record.py  record_episode.py  record_reward.py  record_track.py  save_replays.py
tmrl/tuto/: tuto.py  tuto_minimal_drone.py  tuto_minimal_pendulum.py
wandb/run-20260222_013632-SAC_4_imgs_pretrained WORKER/: run-SAC_4_imgs_pretrained WORKER.wandb
wandb/run-20260222_013730-SAC_4_imgs_pretrained WORKER/: run-SAC_4_imgs_pretrained WORKER.wandb
wandb/run-20260222_021120-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_022031-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_122637-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_122853-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_123859-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_124708-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_125257-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_125556-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_125752-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_130438-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_130824-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_131148-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_131407-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_131905-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_135348-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_135807-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_140250-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_140922-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_142649-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_143002-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_143430-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_143527-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_143954-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_150321-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_150951-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_151910-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_152756-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_153439-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_154205-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_155056-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_155418-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_155721-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_160126-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_161013-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_161615-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_162854-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_195245-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_200154-TQCGRAB_run WORKER/: run-TQCGRAB_run WORKER.wandb
wandb/run-20260222_205154-Residual WORKER/: run-Residual WORKER.wandb
wandb/run-20260222_205311-Residual WORKER/: run-Residual WORKER.wandb
wandb/run-20260222_210800-Residual WORKER/: run-Residual WORKER.wandb
wandb/run-20260222_214959-Residual WORKER/: run-Residual WORKER.wandb
wandb/run-20260222_215258-Residual WORKER/: run-Residual WORKER.wandb
wandb/run-20260222_223124-TQCpaper WORKER/: run-TQCpaper WORKER.wandb
(+131 files in other folders)
