[build-system]
requires = ["setuptools>=65.5"]
build-backend = "setuptools.build_meta"

[project]
name = "tmrl"
version = "0.7.1"
description = "Network-based framework for real-time robot learning"
readme = "readme/pypi.md"
license = { text = "MIT" }
authors = [
    { name = "Jakub Szulc", email = "szulcak05@gmail.com" },
]
keywords = [
    "reinforcement learning",
    "robot learning",
    "trackmania",
    "self driving",
    "roborace",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "chardet",
    "gymnasium>=0.29",
    "keyboard>=0.13.5",
    "inputs>=0.5",
    "matplotlib>=3.5",
    "numpy>=1.24",
    "opencv-python>=4.5",
    "packaging",
    "pandas>=1.5",
    "plotly>=5.17",
    "PyAutoGUI>=0.9.54",
    "pyinstrument",
    "requests>=2.28",
    "rtgym>=0.12",
    "scikit-learn>=1.2",
    "scipy>=1.10",
    "setuptools>=65.5",
    "tlspyo>=0.2.5",
    "torch>=2.4",
    "torchrl>=0.1.1",
    "torchviz>=0.0.2",
    "torchvision>=0.15",
    "wandb>=0.15.8",
    "PyYAML",
    # Platform-specific (setuptools/pip resolve these at install time)
    "mss; sys_platform == 'linux'",
    "vgamepad>=0.1.0; sys_platform == 'linux'",
    "pywin32>=303; sys_platform == 'win32'",
    "vgamepad; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "ruff>=0.4",
    "pytest>=7.0",
]

[dependency-groups]
dev = [
    "mypy>=1.8",
    "ruff>=0.4",
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/trackmania-rl/tmrl"
Documentation = "https://tmrl.readthedocs.io"
Repository = "https://github.com/trackmania-rl/tmrl"

[tool.uv]
# RTX 4090 + CUDA 12: PyTorch from cu124 index (works with CUDA 12.0+)
# Consider all indexes so e.g. requests>=2.31 comes from PyPI, torch from cu124
index-strategy = "unsafe-best-match"
extra-index-url = ["https://download.pytorch.org/whl/cu124"]

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tmrl*"]
exclude = ["tests*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["tmrl"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tlspyo.*", "rtgym.*"]
ignore_missing_imports = true
